# container-device-interface-rs

./: .gitignore  .markdownlint.json  AGENTS.md  BUILDING.md  CONTRIBUTING.md  Cargo.toml  README.md  deny.toml  rust-toolchain.toml
.github/: actionlint.yaml  dependabot.yml
.github/actions/rust-toolchain/: action.yml
.github/workflows/: actionlint.yaml  ci-on-push.yaml  ci.yaml  codeql.yaml  coverage.yaml  dependabot-ok-to-test.yaml  docs.yaml  generator-generic-ossf-slsa3-publish.yml  kata-checkout.yaml  release.yml  reproducible.yaml  revoke-ok-to-test.yaml  rust.yml  scorecard.yml  shellcheck.yaml  static-checks.yaml  update-kata.yaml  zizmor.yaml
scripts/: build-release.sh
src/: annotations.rs  cache.rs  container_edits.rs  container_edits_unix.rs  default_cache.rs  device.rs  lib.rs  parser.rs  registry.rs  resolved_edits.rs  spec.rs  spec_dirs.rs  utils.rs  validations.rs  version.rs  watch.rs
src/cdi/: annotations.rs  mod.rs
src/generate/: config.rs  generator.rs  mod.rs
src/internal/validation/: mod.rs  validate.rs
src/internal/validation/k8s/: mod.rs  objectmeta.rs  validation.rs
src/parser/: mod.rs
src/schema/: mod.rs
src/specs/: config.rs  mod.rs  oci.rs
tests/: cdi_cli.rs  construct_spec.rs  validate_cli.rs
tests/fixtures/: cdi-empty-devices.yaml  cdi-invalid-annotation.yaml  cdi-unknown-field.yaml  cdi-v1.0-enable-monitoring.yaml  cdi-v1.0-legacy-intel-rdt.yaml  cdi-v1.1-good.yaml  cdi-v1.1-legacy-intel-rdt.yaml
