[package]
name = "cdi"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
description = "CDI (Container Device Interface), is a specification, for container-runtimes, to support third-party devices."
repository = "https://hub.apw.app/zvonkok/container-device-interface-rs"
homepage = "https://hub.apw.app/cncf-tags/container-device-interface"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["container"]

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "cdi" # Name of the binary executable
path = "src/bin/cdi.rs" # Path to the source file

[[bin]]
name = "validate" # Name of the binary executable
path = "src/bin/validate.rs" # Path to the source file



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oci-spec = { version = "0.6.6", features = ["runtime"] }
anyhow = "1.0"
clap = "4.5.4"
serde_json = "1.0"
jsonschema = "0.26.1"
once_cell = "1.8.0"
notify = "6.1.1"
serde = "1.0.131"
serde_derive = "1.0.131"
libc = "0.2.112"
nix = "0.24.2"
lazy_static = "1.2"
path-clean = "1.0.1"
serde_yaml = "0.9.33"
semver = "1.0.22"
regex = "1.5.4"
const_format = "0.2.32"

[dev-dependencies]
tempfile = "3.1.0"
pretty_assertions = "1.0.0"
