[package]
name = "container-device-interface"
version = "1.1.1"
edition = "2021"
license = "Apache-2.0"
description = "CDI (Container Device Interface), is a specification, for container-runtimes, to support third-party devices."
repository = "https://github.com/cncf-tags/container-device-interface-rs"
homepage = "https://github.com/cncf-tags/container-device-interface"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["container"]
rust-version = "1.86.0"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "cdi" # Name of the binary executable
path = "src/bin/cdi.rs" # Path to the source file

[[bin]]
name = "validate" # Name of the binary executable
path = "src/bin/validate.rs" # Path to the source file


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oci-spec = { version = "0.10.0", features = ["runtime"] }
anyhow = "1.0"
clap = { version = "4.6.1", features = ["derive"] }
serde_json = "1.0"
jsonschema = "0.46.5"
once_cell = "1.21.4"
serde = { version = "1.0.228", features = ["derive"] }
libc = "0.2.186"
lazy_static = "1.5"
path-clean = "1.0.1"
serde_yaml = "0.9.34"
semver = "1.0.28"
regex = "1.12.3"
const_format = "0.2.36"

[dev-dependencies]
nix = "0.31.3"
tempfile = "3.27.0"
pretty_assertions = "1.4.1"

[profile.release]
opt-level = "z" # CLI tools and a cdylib: size beats speed
lto = true
codegen-units = 1 # one unit gives fat LTO full visibility and a smaller binary
strip = true
panic = "abort" # no unwind tables; safer across the cdylib FFI boundary too
